--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body { margin: 0; padding: 0; height:100%; }
     bottom: 0;
     left: 0;
     width: 100%;
-    opacity: .7;
+    opacity: 1.0;
 }
 #popup:hover {
 
