--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ map.on('load', function () {
                     <div class="card" style="width: 100%;">
                         <div class="row no-gutters">
                             <div class="col-sm-5">
-                                <img class="card-img" style="height: 100%" src="${d["photo_url"]}" alt="Photo">
+                                <img class="card-img" style="height: 100%" src="${d["photo_url"]}" alt="No primary photo today!">
                             </div>
                             <div class="col-sm-7">
                                 <div class="card-body">
