--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body { margin: 0; padding: 0; }
             'type': 'line',
             'source': 'trace',
             'paint': {
-                'line-color': 'yellow',
+                'line-color': 'blue',
                 'line-opacity': 0.75,
                 'line-width': 5
             }
