--- a/index3.html
+++ b/index3.html
@@ -23,13 +23,14 @@
 </head>
 <body>
 <div id="map"></div>
-<div id="title">PCT by SLR - 
+<div id="title">PCT by SLR: 
     <input id="satellite-v9" type="radio" name="rtoggle" value="satellite" onclick="window.location='index.html';">
     <label for="satellite-v9">daily</label>
     <input id="light-v10" type="radio" name="rtoggle" value="light" checked="checked">
     <label for="light-v10">route</label>
-    <br>
-    <p><button type="button" id="playbutton" class="btn btn-success">START</button></p>
+    <p>
+    <button type="button" id="playbutton" class="btn btn-success">START</button></p>
+    
 </div>
 <script src="data.js"></script>
 
@@ -38,7 +39,7 @@
     const map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/outdoors-v11',
-        zoom: 3,
+        zoom: 9,
         center: [-116.467299, 32.590321]
     });
     let lnglat_orig = []
@@ -46,7 +47,7 @@
         lnglat_orig = lnglat_orig.concat(c["lnglat"])
     });
     let lnglat = []
-    for (i = 0; i < lnglat_orig.length; i=i+5) {
+    for (i = 0; i < lnglat_orig.length; i=i+11) {
         lnglat.push(lnglat_orig[i]);
     }
 
@@ -97,7 +98,7 @@
         });
 
         // setup the viewport
-        map.jumpTo({ 'center': init_coordinates[0], 'zoom': 11 });
+        map.jumpTo({ 'center': init_coordinates[0], 'zoom': 9 });
         map.setPitch(30);
 
         // on a regular basis, add more coordinates from the saved list and update the map
@@ -125,7 +126,7 @@
                     window.clearInterval(timer);
                 }
             }
-        }, 3);
+        }, 1);
     });
 </script>
 
