--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body { margin: 0; padding: 0; height:100%; }
 <div id="title">PCT by SLR: 
     <input id="satellite-v9" type="radio" name="rtoggle" value="satellite" checked="checked">
     <label for="satellite-v9">daily</label>
-    <input id="light-v10" type="radio" name="rtoggle" value="light" onclick="window.location='index3.html';">
+    <input id="light-v10" type="radio" name="rtoggle" value="light" onclick="window.location='live.html';">
     <label for="light-v10">route</label>
 </div>
 
