--- a/live.html
+++ b/live.html
@@ -1,134 +1,162 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>PCT by SLR</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
-<style>
-    body { margin: 0; padding: 0; }
-    #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-    #title {
-        position: absolute;
-        background: #efefef;
-        padding: 10px;
-        font-family: 'Open Sans', sans-serif;
-    }
-</style>
+    <meta charset="utf-8">
+    <title>PCT by SLR</title>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
+
+        #title {
+            position: absolute;
+            background: #efefef;
+            padding: 10px;
+            font-family: 'Open Sans', sans-serif;
+        }
+    </style>
 </head>
+
 <body>
-<div id="map"></div>
-<div id="title">PCT by SLR: 
-    <input id="satellite-v9" type="radio" name="rtoggle" value="satellite" onclick="window.location='index.html';">
-    <label for="satellite-v9">daily</label>
-    <input id="light-v10" type="radio" name="rtoggle" value="light" checked="checked">
-    <label for="light-v10">route</label>
-    <p>
-    <button type="button" id="playbutton" class="btn btn-success">START</button></p>
-    
-</div>
-<script src="data.js"></script>
+    <div id="map"></div>
+    <div id="title">PCT by SLR:
+        <input id="satellite-v9" type="radio" name="rtoggle" value="satellite" onclick="window.location='index.html';">
+        <label for="satellite-v9">daily</label>
+        <input id="light-v10" type="radio" name="rtoggle" value="light" checked="checked">
+        <label for="light-v10">route</label>
+        <p>
+            <button type="button" id="playbutton" class="btn btn-success">START</button>
+        </p>
 
-<script>
-    mapboxgl.accessToken = 'pk.eyJ1Ijoic2FtcnlhbjE4IiwiYSI6ImNrNmZ4aXBwbDByOG0za3A2YmljN2RqZmoifQ.7uz_HttVRtIdjiq2V4oJKg';
-    const map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/outdoors-v11',
-        zoom: 9,
-        center: [-116.467299, 32.590321]
-    });
-    let lnglat_orig = []
-    coordinates.forEach(function(c) {
-        lnglat_orig = lnglat_orig.concat(c["lnglat"])
-    });
-    let lnglat = []
-    for (i = 0; i < lnglat_orig.length; i=i+11) {
-        lnglat.push(lnglat_orig[i]);
-    }
+    </div>
+    <script src="data.js"></script>
 
-    let isPaused = true;
-    $('#playbutton').on('click', function(e) {
-        e.preventDefault();
-        isPaused = !isPaused;
-        if (!isPaused) {
-            $('#playbutton').attr('class', "btn btn-danger");
-            $('#playbutton').html('PAUSE');
-        }
-        else {
-            $('#playbutton').attr('class', "btn btn-success");
-            $('#playbutton').html('START');
-
-        }
-    });
-
-    // https://docs.mapbox.com/mapbox-gl-js/example/live-update-feature/
-    map.on('load', async () => {
-        const data = {
-            'type': "FeatureCollection",
-            'features': [{
-                'type': 'Feature',
-                'geometry': {
-                    'type': 'LineString',
-                    'properties': {},
-                    'coordinates': lnglat
-                }
-            }]
-            
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1Ijoic2FtcnlhbjE4IiwiYSI6ImNrNmZ4aXBwbDByOG0za3A2YmljN2RqZmoifQ.7uz_HttVRtIdjiq2V4oJKg';
+        const map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/outdoors-v11',
+            zoom: 9,
+            center: [-116.467299, 32.590321]
+        });
+        let lnglat_orig = []
+        coordinates.forEach(function (c) {
+            lnglat_orig = lnglat_orig.concat(c["lnglat"])
+        });
+        let lnglat = []
+        for (i = 0; i < lnglat_orig.length; i = i + 11) {
+            lnglat.push(lnglat_orig[i]);
         }
 
-        const init_coordinates = data.features[0].geometry.coordinates;
-        data.features[0].geometry.coordinates = [init_coordinates[0]];
-        map.addSource('trace', { type: 'geojson', data: data });
+        let isPaused = true;
+        $('#playbutton').on('click', function (e) {
+            e.preventDefault();
+            isPaused = !isPaused;
+            if (!isPaused) {
+                $('#playbutton').attr('class', "btn btn-danger");
+                $('#playbutton').html('PAUSE');
+            }
+            else {
+                $('#playbutton').attr('class', "btn btn-success");
+                $('#playbutton').html('START');
 
-        // add it to the map
-        map.addLayer({
-            'id': 'trace',
-            'type': 'line',
-            'source': 'trace',
-            'paint': {
-                'line-color': 'blue',
-                'line-opacity': 0.75,
-                'line-width': 5
             }
         });
 
-        // setup the viewport
-        map.jumpTo({ 'center': init_coordinates[0], 'zoom': 9 });
-        map.setPitch(30);
+        // https://docs.mapbox.com/mapbox-gl-js/example/live-update-feature/
+        map.on('load', async () => {
+            const data = {
+                'type': "FeatureCollection",
+                'features': [{
+                    'type': 'Feature',
+                    'geometry': {
+                        'type': 'LineString',
+                        'properties': {},
+                        'coordinates': lnglat
+                    }
+                }]
 
-        // on a regular basis, add more coordinates from the saved list and update the map
-        let i = 0;
-        const timer = setInterval(() => {
-            if(!isPaused) {
-                if (i < init_coordinates.length) {
-                    data.features[0].geometry.coordinates.push(init_coordinates[i]);
-                    map.getSource('trace').setData(data);
-                    let camera_center = map.getFreeCameraOptions()._position.toLngLat()
-                    let delta = [
-                        Math.abs(camera_center.lng - init_coordinates[i][0]), // horizontal
-                        Math.abs(camera_center.lat - init_coordinates[i][1])  // vertical
-                    ]
-                    total_delta = (200*delta[0] + 100*delta[1]);
-                    let duration = 500;
-                    if (total_delta > 0.1) duration = 5e7 / (total_delta**3);
-
-                    map.panTo(
-                        init_coordinates[i],
-                        {duration: duration}
-                    );
-                    i++;
-                } else {
-                    window.clearInterval(timer);
-                }
             }
-        }, 1);
-    });
-</script>
+
+            const init_coordinates = data.features[0].geometry.coordinates;
+            data.features[0].geometry.coordinates = [init_coordinates[0]];
+            map.addSource('trace', { type: 'geojson', data: data });
+
+            // add it to the map
+            map.addLayer({
+                'id': 'trace',
+                'type': 'line',
+                'source': 'trace',
+                'paint': {
+                    'line-color': 'blue',
+                    'line-opacity': 0.75,
+                    'line-width': 5
+                }
+            });
+            map.addSource('dem', {
+                'type': 'raster-dem',
+                'url': 'mapbox://mapbox.mapbox-terrain-dem-v1'
+            });
+            map.addLayer(
+            {
+                'id': 'hillshading',
+                'source': 'dem',
+                'type': 'hillshade'
+                // insert below waterway-river-canal-shadow;
+                // where hillshading sits in the Mapbox Outdoors style
+                },
+                // 'waterway-river-canal-shadow'
+            );
+
+            // setup the viewport
+            map.jumpTo({ 'center': init_coordinates[0], 'zoom': 9 });
+            map.setPitch(30);
+
+            // on a regular basis, add more coordinates from the saved list and update the map
+            let i = 0;
+            const timer = setInterval(() => {
+                if (!isPaused) {
+                    if (i < init_coordinates.length) {
+                        data.features[0].geometry.coordinates.push(init_coordinates[i]);
+                        map.getSource('trace').setData(data);
+                        let camera_center = map.getFreeCameraOptions()._position.toLngLat()
+                        let delta = [
+                            Math.abs(camera_center.lng - init_coordinates[i][0]), // horizontal
+                            Math.abs(camera_center.lat - init_coordinates[i][1])  // vertical
+                        ]
+                        total_delta = (200 * delta[0] + 100 * delta[1]);
+                        let duration = 500;
+                        if (total_delta > 0.1) duration = 5e7 / (total_delta ** 3);
+
+                        map.panTo(
+                            init_coordinates[i],
+                            { duration: duration }
+                        );
+                        i++;
+                    } else {
+                        window.clearInterval(timer);
+                    }
+                }
+            }, 1);
+        });
+    </script>
 
 </body>
+
 </html>
