--- a/live.html
+++ b/live.html
@@ -122,7 +122,7 @@
             );
 
             // setup the viewport
-            map.jumpTo({ 'center': [-116.467299, 32.7], 'zoom': 10 });
+            map.jumpTo({ 'center': [-116.467299, 32.7], 'zoom': 9 });
             map.setPitch(30);
 
             // on a regular basis, add more coordinates from the saved list and update the map
@@ -143,7 +143,7 @@
 
                         map.panTo(
                             init_coordinates[i],
-                            { duration: duration, zoom: 9 }
+                            { duration: duration }
                         );
                         i++;
                     } else {
