--- a/live.html
+++ b/live.html
@@ -52,12 +52,14 @@
 <body>
     <div id="map"></div>
 
-    <div id="title">PCT by SLR:
-        <input id="satellite-v9" type="radio" name="rtoggle" value="satellite" onclick="window.location='index.html';">
-        <label for="satellite-v9">daily</label>
-        <input id="light-v10" type="radio" name="rtoggle" value="light" checked="checked">
-        <label for="light-v10">route</label>
+    <div id="title">
+        <h4>PCT by SLR</h4>
+        <div class="btn-group blocks btn-toggle">
+            <button class="btn btn-sm btn-default" onclick="window.location='index.html';">DAILY</button>
+            <button class="btn btn-sm btn-primary active">ANIMATION</button>
+        </div>
     </div>
+
     <button type="button" id="playbutton" class="btn btn-success">START</button>
 
     <script src="data.js"></script>
