--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 <body>
 
     <div id="map"></div>
-    <div id="title">PCT by SLR:
-        <input id="satellite-v9" type="radio" name="rtoggle" value="satellite" checked="checked">
-        <label for="satellite-v9">daily</label>
-        <input id="light-v10" type="radio" name="rtoggle" value="light" onclick="window.location='live.html';">
-        <label for="light-v10">route</label>
+    <div id="title">
+        <h4>PCT by SLR</h4>
+        <div class="btn-group blocks btn-toggle">
+            <button class="btn btn-sm btn-primary active">DAILY</button>
+            <button class="btn btn-sm btn-default" onclick="window.location='live.html';">ANIMATION</button>
+        </div>
     </div>
 
     <div id="popup">
@@ -101,7 +102,8 @@
                             info.
                         </p>
                         <p class="card-text">
-                            Or check out the route viz (top left). Still working on all of this. HMU with ideas.
+                            Or check out the animated route viz (button up top). Still working on all of this. HMU with
+                            ideas.
                         </p>
                         <!-- <button class="btn btn-primary" id="toggle">Hide Bottom Popup</button> -->
                     </div>
