--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">${name}</h5>
                                     <div class="card-text">
+                                        <strong>Date:</strong> ${d["start_date_local"].substring(0,10)}
                                         <strong>Distance:</strong> ${d["distance_miles"].toFixed(2)} miles
                                         <br><strong>Pace:</strong> ${pace} min/mile
                                         <br><strong>Vert:</strong> ${d["vert_feet"].toFixed(0)} ft.
