--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             info.
                         </p>
                         <p class="card-text">
-                            Or check out the animated route viz (button up top). Still working on all of this. HMU with
+                            Or check out the animated route viz (click ANIMATION up top). Still working on all of this. HMU with
                             ideas.
                         </p>
                         <!-- <button class="btn btn-primary" id="toggle">Hide Bottom Popup</button> -->
