--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                     <h5 class="card-title">${name}</h5>
                                     <div class="card-text">
                                         <strong>Date:</strong> ${d["start_date_local"].substring(0,10)}
-                                        <strong>Distance:</strong> ${d["distance_miles"].toFixed(2)} miles
+                                        <br><strong>Distance:</strong> ${d["distance_miles"].toFixed(2)} miles
                                         <br><strong>Pace:</strong> ${pace} min/mile
                                         <br><strong>Vert:</strong> ${d["vert_feet"].toFixed(0)} ft.
                                         <br><strong>Calories:</strong> ${d["calories"]} cals
