--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
                             Hello! I'm Sam. I hiked the Pacific Crest Trail in 2021.
                         </p>
                         <p class="card-text">
-                            I tracked my route on a Garmin watch and plotted the route here using the <a
+                            I tracked my route on a Garmin GPS watch and have plotted the full route here using the <a
                                 href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox API</a>. Each color change is a
                             different day of
-                            hiking. You can zoom in to see the exact route of each day. Hover over any of them to see
-                            info.
+                            hiking. You can zoom in to see the exact route walked each day. Hover over any of them to see
+                            my daily journal notes and stats.
                         </p>
                         <p class="card-text">
-                            Or check out the animated route viz (click ANIMATION up top). Still working on all of this. HMU with
-                            ideas.
+                            Or check out the animated route viz (click the animation button up top). Still working on all of this. <a
+                            href="https://samryan18.github.io/#contact">HMU</a> with
+                            ideas
                         </p>
                         <!-- <button class="btn btn-primary" id="toggle">Hide Bottom Popup</button> -->
                     </div>
