--- a/index.html
+++ b/index.html
@@ -92,19 +92,18 @@
                     <div class="card-body">
                         <h5 class="card-title">About</h5>
                         <p class="card-text">
-                            Hello! I'm Sam. I hiked the Pacific Crest Trail in 2021.
+                            Hello! I'm Sam. Some friends and I walked for a while in 2021. When we got to the destination (Canada), 
+                            they didn't let us in so we turned around and went home. Good times all around.
                         </p>
                         <p class="card-text">
-                            I tracked my route on a Garmin GPS watch and have plotted the full route here using the <a
+                            I tracked the route on a Garmin GPS watch and plotted the full route here using the <a
                                 href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox API</a>. Each color change is a
-                            different day of
-                            hiking. You can zoom in to see the exact route walked each day. Hover over any of them to see
+                            different day of hiking. You can zoom in to see the exact route walked each day. Hover over any of them to see
                             my daily journal notes and stats.
                         </p>
                         <p class="card-text">
                             Or check out the animated route viz (click the animation button up top). Still working on all of this. <a
-                            href="https://samryan18.github.io/#contact">HMU</a> with
-                            ideas
+                            href="https://samryan18.github.io/#contact">Hit me up</a> if you have ideas!
                         </p>
                         <!-- <button class="btn btn-primary" id="toggle">Hide Bottom Popup</button> -->
                     </div>
