--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                     <div class="card-body">
                         <h5 class="card-title">About</h5>
                         <p class="card-text">
-                            Hello! I'm Sam. Some friends and I walked for a while in 2021. When we got to the destination (Canada), 
-                            they didn't let us in so we turned around and went home. Good times all around.
+                            Hello! I'm Sam. Some friends and I walked every day for a few months in 2021. I was really gunning for a Taco Bell sponsorship but never got one. Luckily it's the journey that counts. When we got to the destination (Canada), 
+                            they didn't let us in so we turned around and went home.
                         </p>
                         <p class="card-text">
-                            I tracked the route on a Garmin GPS watch and plotted the full route here using the <a
-                                href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox API</a>. Each color change is a
+                            I tracked my location on a Garmin GPS watch and plotted the full route here (thanks <a
+                                href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox</a>!). Each color change is a
                             different day of hiking. You can zoom in to see the exact route walked each day. Hover over any of them to see
-                            my daily journal notes and stats.
+                            my daily journal notes and some stats.
                         </p>
                         <p class="card-text">
                             Or check out the animated route viz (click the animation button up top). Still working on all of this. <a
