--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
                     <div class="card-body">
                         <h5 class="card-title">About</h5>
                         <p class="card-text">
-                            Hello! I'm Sam. Some friends and I walked every day for a few months in 2021. I was really gunning for a Taco Bell sponsorship but never got one. Luckily it's the journey that counts. When we got to the destination (Canada), 
-                            they didn't let us in so we turned around and went home.
+                            Hello! I'm Sam. Some friends and I walked north for a few months in 2021. I was really gunning for a Taco Bell sponsorship but never got one. Luckily it's the journey that counts.
                         </p>
                         <p class="card-text">
                             I tracked my location on a Garmin GPS watch and plotted the full route here (thanks <a
