--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             Hello! I'm Sam. Some friends and I walked north for a few months in 2021. I was really gunning for a Taco Bell sponsorship but never got one. Luckily it's the journey that counts.
                         </p>
                         <p class="card-text">
-                            I tracked my location on a Garmin GPS watch and plotted the full route here (thanks <a
-                                href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox</a>!). Each color change is a
+                            I tracked my location on a Garmin GPS watch and have the full route here (used some fun mapping tools from <a
+                                href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox</a>). Each color change is a
                             different day of hiking. You can zoom in to see the exact route walked each day. Hover over any of them to see
                             my daily journal notes and some stats.
                         </p>
