--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <p class="card-text">
                             I tracked my location on a Garmin GPS watch and have the full route here (used some fun mapping tools from <a
                                 href="https://docs.mapbox.com/mapbox-gl-js/api/">Mapbox</a>). Each color change is a
-                            different day of hiking. You can zoom in to see the exact route walked each day. Hover over any of them to see
+                            different day of hiking. Zoom in to see the exact route walked each day. Hover over any of them to see
                             my daily journal notes and some stats.
                         </p>
                         <p class="card-text">
