Polish flyover controls, progress bars, mobile layout, campsites
- Campsite icons at day endpoints during flyover animation
- Redesigned progress bars (both views): thumb dot, click/drag to scrub
- Log progress bar now scrolls to position on click/drag
- Mobile log: flex column layout (map top, journal below, no overlap)
- Flyover controls: consistent sizing via .ctrl-sm class
- Zoom buttons: magnifying glass SVG icons
- Mobile flyover: larger progress bar touch target (36px)
- Mobile 3D toast notification (auto-dismisses)
- Fix: scrubbing while paused now updates trail/camera immediately

--- a/index.html
+++ b/index.html
@@ -1124,6 +1124,7 @@
             foIsPaused = !foIsPaused;
             document.getElementById('fo-playBtn').textContent = foIsPaused ? 'Start' : 'Pause';
             document.getElementById('fo-playBtn').classList.toggle('active', !foIsPaused);
+            if (!foIsPaused && foAnimateFn) requestAnimationFrame(foAnimateFn);
         }
 
         function foSetSpeed(idx) {
@@ -1559,7 +1560,10 @@
                     document.getElementById('fo-playBtn').classList.remove('active');
                 }
                 if (isMobile) {
-                    document.getElementById('story').scrollTop = storyScrollPos;
+                    var savedPos = storyScrollPos;
+                    requestAnimationFrame(function () {
+                        document.getElementById('story').scrollTop = savedPos;
+                    });
                 } else {
                     window.scrollTo(0, storyScrollPos);
                 }
